objects/Leave_Ledger__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Leave_Ledger</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible_for_use2__c</fullName>
        <formula>if( 
   text( Status__c ) = &quot;Expired&quot;,
   false,
   if( 
      today()  &lt;  Contact__r.Sick_Pay_Eligibility_Date__c,
      false,
      true
      )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible for use2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_for_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leave_Hours__c</fullName>
        <label>Leave Hours</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Accrued - Accrued weekly
Submitted - Sick Leaves Applied
Approved - Sick Leave Approved</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Accrued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timesheet_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Entry</label>
        <referenceTo>tc9_ti__Time_Sheet_Entry__c</referenceTo>
        <relationshipName>Leave_Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Checkbox</type>
    </fields>
    <label>Sick Ledger</label>
    <nameField>
        <label>Leave Ledger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sick Ledger</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_to_apply_sick_leave</fullName>
        <active>true</active>
        <description>You are not eligible to use accrued sick time until 90 days have passed from the start of employment</description>
        <errorConditionFormula>(Contact__r.First_Day_Worked__c + 90) &gt; TODAY() &amp;&amp;  Leave_Hours__c &lt; 0</errorConditionFormula>
        <errorMessage>You are not eligible to use accrued sick time until 90 days have passed from the start of employment.</errorMessage>
    </validationRules>
</CustomObject>